cabal-version:  3.0
name:           cuttle
version:        0
description:    Concurrent programming language

common base
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010
  build-depends: base >= 4.7 && <5

executable cutl
  import:         base
  hs-source-dirs: compiler
  main-is:        Main.hs
  build-depends:
    parsec ^>= 3.1,
    text,
